Closed Bug 1579897 Opened 6 years ago Closed 6 years ago

about:support prints incorrect "Remote Processes" for webIsolated processes

Categories

(Toolkit :: General, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla71
Fission Milestone M4
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- wontfix
firefox69 --- wontfix
firefox70 --- wontfix
firefox71 --- verified
firefox72 --- verified

People

(Reporter: mccr8, Assigned: mccr8)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Bug 1505322 added a "Remote Processes" box to about:support.

The data for this is generated in toolkit/modules/Troubleshoot.jsm by getting the remote types for each process:
remoteType = Services.ppmm.getChildAt(i).remoteType;

Then toolkit/locales/en-US/toolkit/global/processTypes.ftl is used to translate this. However, when Fission is enabled, the remote type is something like webIsolated=www.example.com which of course has no translation.

But wait, you say, shouldn't we have tests for this? We have at least one: dom/tests/browser/browser_beforeunload_between_chrome_content.js, that at least incidentally tests this. (Also browser_policy_disable_profile_reset.js and probably a lot more, given how many bc tests I see failing in my try run.)

This test opens an example.com URL, then opens about:support. However, this seems to implicitly rely on dom.ipc.keepProcessesAlive.web, which is set in BC tests, working.

Right now, this pref does not work with Fission enabled, so we seem to throw out example.com before we load about:support, so we never hit the assertion that a translation exists. In bug 1579835, I wrote a patch to make the pref work, which causes the test to start failing.

Nika suggested that the remoteType get turned into webIsolated. I'm not sure exactly what the text string for that would be. As a separate thing, she suggested that there be a separate box in about:support that identifies what the domains are for each isolated process.

Assignee: nobody → continuation
Blocks: 1580212
No longer blocks: 1579835

Remove the URLs so they can have a translated string in about:support.

Pushed by amccreight@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ed89fc2a60d8 Make webIsolated= processes work in about:support. r=mconley,fluent-reviewers,flod
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Fission Milestone: --- → M4

Hi Andrew, is there something that can be manually verified here?

Flags: needinfo?(continuation)

(In reply to Catalin Sasca, QA [:csasca] from comment #5)

Hi Andrew, is there something that can be manually verified here?

This is a Fission-specific issue. You have to have Fission enabled, then load a regular webpage, then go to about:support. The "Remote Processes" section should have at least one entry where the Type is "Isolated Web Content".

Flags: needinfo?(continuation)

Ok Andrew, thanks for the fast reply!

Reproduce the issue with an old Nightly build 71.0a1 (Build id: 20190909214621).
Verified - fixed on Nightly 71.0a1 (Build id: 20190926213542) and latest Nightly 72.0a1 (Build id: 20191128214853) on Windows 10, Ubuntu 18.04 and Mac OS 10.14.
On Beta 71 version, fission.autostart pref is blocked.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: