Bug 1579897 - Make webIsolated= processes work in about:support. r=mconley,fluent-reviewers,flod

Remove the URLs so they can have a translated string in about:support.

Differential Revision: https://phabricator.services.mozilla.com/D45373